# offline-twitter-cyber-fortune-teller-py

./: .gitignore  README.md  README_zh_CN.md  pyproject.toml  ruff.toml
config/: config.toml  xpath.toml
src/offline_twitter_cyber_fortune_teller_py/: __init__.py  __main__.py  analyzer.py  browser.py  data_type.py  lock.py  spider.py
tests/: test_analyzer.py
